--- a/tello_driver/CMakeLists.txt
+++ b/tello_driver/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.14)
 project(tello_driver)
 
 #=============
@@ -13,16 +13,6 @@ endif ()
 # Default to C++14
 if (NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
-endif ()
-
-# Emulate colcon
-if ($ENV{CLION_IDE})
-  message(STATUS "Running inside CLion")
-  set(tello_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/tello_msgs/share/tello_msgs/cmake")
-  set(ros2_shared_DIR "${PROJECT_SOURCE_DIR}/../../../install/ros2_shared/share/ros2_shared/cmake")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DRUN_INSIDE_CLION")
-  set(FastRTPS_INCLUDE_DIR "/opt/ros/foxy/include")
-  set(FastRTPS_LIBRARY_RELEASE "/opt/ros/foxy/lib/libfastrtps.so")
 endif ()
 
 # Asio requires threading
@@ -72,6 +62,7 @@ set(DRIVER_NODE_DEPS
   geometry_msgs
   OpenCV
   rclcpp
+  rclcpp_components
   ros2_shared
   sensor_msgs
   std_msgs
@@ -126,6 +117,7 @@ set(JOY_NODE_DEPS
   class_loader
   geometry_msgs
   rclcpp
+  rclcpp_components
   sensor_msgs
   tello_msgs)
 
