Tello: Joy node and Tello Driver modification (teleoperation purpose)
Problem
=======
1. Joy node (teleoperation) is not a lifecycle node originally, so we cannot control when to allow action request and teleoperation control
2. Tello package doesnt have state tracker, for future implementation states will be crucial for the Controller Node

Solution
========
1. Modify Joy Node into a lifecycle node.
2. Add a class called 'FlighState' to keep track of drone state based on action and response
3. Publish flight state to '/tello_state' topic , so tello controller can use it as reference of drone current state

Note
====
1. These nodes are called within our tello controller launch in sensors package
2. i need help regarding integrating the tello_gazebo package as it needs some dependencies in the container

--- a/tello_driver/CMakeLists.txt
+++ b/tello_driver/CMakeLists.txt
@@ -31,7 +31,8 @@ find_package(ros2_shared REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(tello_msgs REQUIRED)
-
+find_package(lifecycle_msgs REQUIRED)
+find_package(rclcpp_lifecycle REQUIRED)
 # Package includes not needed for CMake >= 2.8.11
 include_directories(
   include
@@ -66,7 +67,9 @@ set(DRIVER_NODE_DEPS
   ros2_shared
   sensor_msgs
   std_msgs
-  tello_msgs)
+  tello_msgs
+  rclcpp_lifecycle
+  std_msgs)
 
 set(DRIVER_NODE_LIBS
   avcodec
@@ -119,7 +122,8 @@ set(JOY_NODE_DEPS
   rclcpp
   rclcpp_components
   sensor_msgs
-  tello_msgs)
+  tello_msgs
+  rclcpp_lifecycle)
 
 add_library(tello_joy_node SHARED
   ${JOY_NODE_SOURCES})
