--- a/tello_driver/package.xml
+++ b/tello_driver/package.xml
@@ -26,7 +26,7 @@
     <depend>sensor_msgs</depend>
     <depend>std_msgs</depend>
     <depend>tello_msgs</depend>
-
+    <depend>rclcpp_lifecycle</depend>
     <export>
         <build_type>ament_cmake</build_type>
     </export>
