--- a/tello_msgs/CMakeLists.txt
+++ b/tello_msgs/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.14)
 project(tello_msgs)
 
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
 # Default to C++14
 if (NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
@@ -28,6 +32,8 @@ rosidl_generate_interfaces(
   "msg/TelloResponse.msg"
   "srv/TelloAction.srv"
   DEPENDENCIES std_msgs
+  LIBRARY_NAME ${PROJECT_NAME}
 )
 
+ament_export_dependencies(rosidl_default_runtime)
 ament_package()
